# Artificial-Aging

./: .gitignore  LICENSE  README.md  __init__.py  docs_repo_explanation.md  pyproject.toml
examples/aging-as-loss-of-goal-directedness/: README.md  aging-smiley_16x16-recovery-organ-loss.ipynb  aging-smiley_16x16-recovery-socket-loss.ipynb  aging-smiley_16x16-schedule.ipynb  aging.py  recovery.py  run_baseline_1000.py  run_memory_reset_1000.py
examples/aging-as-loss-of-goal-directedness/agents/smiley_16x16/: agent.yml  env.yml  world.yml
examples/evolve/: README.md  example-french_6x6.ipynb  helper.py  main.py
examples/evolve/agents/: sm_ff-embd_flat-pm_ff.yml  sm_ff-embd_flat-pm_rgrn.yml  sm_ff-embd_mean-pm_ff.yml  sm_ff-embd_mean-pm_rgrn.yml
examples/evolve/agents/pretrained/czech_8x8/sm_ff-embd_flat-pm_ff/: agent.yml  world.yml
examples/evolve/agents/pretrained/czech_8x8/sm_ff-embd_flat-pm_rgrn/: agent.yml  world.yml
examples/evolve/agents/pretrained/czech_8x8/sm_ff-embd_mean-pm_ff/: agent.yml  env.yml  world.yml
examples/evolve/agents/pretrained/czech_8x8/sm_ff-embd_mean-pm_rgrn/: agent.yml  world.yml
examples/evolve/configs/: train.yml  train_SimpleGA.yml
examples/evolve/render/: render.yml
examples/evolve/tasks/: czech_8x8.json  french_6x6.json  ooe_6x6.json  smiley_16x16.json  smiley_9x9.json
musepy/: experiment.py
musepy/agents/: __init__.py  genetic_NCA_agent.py  hybrid_neural_cellular_automaton_agent.py
musepy/corpus/: __init__.py  curriculum.py  task.py
musepy/envs/: __init__.py  hybrid_nca.py
musepy/util/: state.py
musepy/util/geometric/: __init__.py  grid.py
musepy/visualize/: __init__.py  analysis.py  image.py  render.py
(+13 files in other folders)
